Refactor MCPToolValueDefinition